tests/fixtures/invalid/bool_div_bytes.py
# Cannot divide Bool and Bytes
x: float = True / b"hello"
